client/src/styles/pages.scss
@import "./variables";

.newspage {
  & > * {
    padding: 5px 15px;
    text-align: left;
  }

  & > header > h2 {
    margin-bottom: 10px;
    font-weight: 700;
    font-size: 32px;
    line-height: 1.3;
  }
}

.subtitulo {
  margin-bottom: 10px;
  font-weight: 500;
  line-height: 1.5;
  text-align: left;
}

.date {
  font-weight: 600;
  font-size: 14px;
  text-align: right;
}

.article {
  .light & {
    background-color: $bg-light;
  }

  .dark & {
    background-color: $bg-dark;
  }

  & > * {
    margin-top: 15px;
  }

  p {
    line-height: 1.5;
  }

  h3 {
    margin-top: 25px;
    color: $datupv;
    font-weight: 700;
    font-size: 24px;
  }

  h4 {
    font-weight: 700;
    font-size: 20px;
  }

  h5 {
    font-weight: 900;
    font-size: 16px;
  }
}

@media (min-width: 800px) {
  .newspage > header {
    padding: 10px 0;
    width: 100%;

    & > * {
      margin-left: calc((100vw - 800px) / 2) !important;
      width: 800px;
    }
  }

  .newspage > article {
    margin: auto;
    padding: 0;
    width: 800px;
  }
}

.img-container {
  margin: 10px auto;
  width: 80%;
  max-width: 300px;

  div {
    margin: auto;
  }
}

.img {
  width: 100%;
}

.image-with-text .img-container {
  margin: 5px auto;
}

@media (min-width: 800px) {
  .image-with-text {
    display: grid;
    grid-template-columns: 1fr 1fr;

    & > * {
      display: grid;
      flex-grow: 1;
      place-items: center;
      width: 100%;
    }
  }
}

.article a,
.article a:hover {
  color: $datupv !important;
  text-decoration: underline;
}

